Change header title to 'How To Be Mindful as a Journalist'
Updated header title to reflect new content.

--- a/index.html
+++ b/index.html
@@ -14,14 +14,8 @@
   </head>
   <body>
 
-    <!--
-Header customized:
-- No logo image
-- Name set to Haloh Quinones
--->
-
     <header>          
-      <h1>Haloh Quinones' Instruction Tips</h1>
+      <h1>Haloh Quinones' How To Be Mindful as a Journalist</h1>
       <h3>An Instruction Challenge for JOUR108</h3>
     </header>
 
