--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="data-remix-readonly" content="null">
     <meta charset="utf-8">
 
-    <title>Haloh Quinones' Instruction Tips</title>
+    <title>Haloh Quinones' How To Be Mindful as a Journalist</title>
     <script src="https://thimble.mozilla.org/resources/remix/index.js" type="text/javascript"></script>
   </head>
   <body>
