--- a/index.html
+++ b/index.html
@@ -23,84 +23,93 @@
 
       <article>            
         <!--
-Introduction and instructions from original template (WikiHow-style rocket guide)
+Introduction and instructions from original guide (WikiHow mindfulness guide)
 -->         
         <div class="introduction">
 
           <div class="information">
-            <h1>How to make an awesome water rocket</h1>
+            <h1>How To Be Mindful </h1>
 
             <hr>
-            <p><b>Assembly time:</b> 30 minutes<br>
-              <b>Awesome rating:</b> 100% awesome</p>
+            <p><b>Assembly time:</b> 5 minutes<br>
+              <b>Awesome rating:</b> 100% grounding</p>
             <hr>
 
-            <p>Are you wondering how to make a cool rocket that can easily surpass a baking soda-vinegar rocket? It's really fun to make. Why don't you try to make it yourself? Follow the steps and you'll make a great rocket!</p>
+            <p>Feeling stressed, anxious, or out-of-whack? A mindfulness break can help reset your focus and bring you back into the present moment. No need for special equipment, just a few minutes to take a mental pause. Follow these simple steps to create a calming and simple ritual to create peace whenever life gets loud.  </p>
 
           </div>
 
           <aside>
 
             <!--
-Things You'll Need (original rocket items)
+Things You'll Need (original mindfulness steps)
 -->         
             <ul class="list-of-items">
               <li><h2>Things You'll Need</h2></li>
-              <li>Bottle (plastic soda bottle)</li>
-              <li>Cardboard (for fins)</li>
-              <li>Hand pump (bicycle style)</li>
-              <li>Cork (fits tightly in the bottle opening)</li>
-              <li>Duct tape</li>
-              <li>Water</li>
+              <<li>A quiet or low-distraction area</li>
+              <li>A comfortable seat or cushion</li>
+              <li>Headphones (optional, for audio)</li>
+              <li>A timer or phone (on Do Not Disturb)</li>
+              <li>Binder paper or notes app for reflections</li>
+              <li>An open-minded mindset</li>
             </ul>
           </aside>
         </div>
 
 
         <!--
-Original step-by-step structure preserved, with your YouTube + Flickr images
+Step-by-step structure containing YouTube and Flickr images
 -->         
         <ol class="step-by-step">
 
           <!-- Step 1 -->
           <li>
             <div class="content">
-              <h3>Invert the bottle and cut three flippers of cardboard.</h3>
-              <p>This is necessary to hold the rocket at launch time. Make your best design.</p> 
+              Step 1: Choose and prepare your space.</h3>
+              <p>Find a spot where you can sit with minimal interruptions. It can be by a window,
+              at your desk, or outside. Turn on Do Not Disturb or silence notifications.
+              Sit upright but relaxed, with your feet grounded or legs crossed.</p>
             </div>
           </li>
 
-          <!-- Step 2 + Flickr image 1 -->
+          <!-- Step 2 -->
           <li>
             <div class="content">
-              <h3>Tape them all to the bottle at an angle of about 120 degrees between them.</h3>
-              <p>Remember, the bottle must be upside down and the flippers must not be taped at the bottle's base.</p>
+               <h3>Step 2: Set an intention for your break.</h3>
+              <p>Before you begin, decide your goal. Maybe you want to feel
+              calmer, more focused, or simply present. Silently say your intention:
+              “For the next five minutes, I’m giving myself permission to just be...”</p>
 
               <!-- Flickr image 1 -->
               <a href="https://www.flickr.com/photos/83905817@N08/7676641926/in/photolist-2qXqqra-2otm9XW-2ouzjC4-Ub6TqU-2ouCJzE-2otN7vP-2ouFAPw-2otCvCW-kEfQkz-Ndk3zL-FLyyNu-2nMdg73-2nATjJU-pSfQUi-2otsdvs-MPvWA5-cGmNch-ngL4fz-nekqex-2jWyzPy-2miiDTP-9ZuLZF-2o9qWBg-2m5Kkun-bedSNg-2kENjWe-2ngReE3-2n7qZj7-U8aZTk-2ouKWJq-2orrJNu-2mqFbAD-2n5oRZT-2iWgUip-LPY2qQ-2ikw7gk-2iiyqBY-2m797R9-2nCmwrj-2n4NBsD-2otrjj4-2misoWu-2konji4-2k5L3B2-2otEZo4-2dN4guF-2qGgEW9-2mj2XEe-Wu8QDc-2otyQnt" title="Mindfulness">
                 <img src="https://live.staticflickr.com/7278/7676641926_2034eb9402_c.jpg" alt="Mindfulness">
               </a>
-              <p class="caption">Strong, evenly spaced fins keep your rocket stable.</p>
+              <p class="caption">A calm space supports a calm mind.</p>
             </div>
           </li>
 
           <!-- Step 3 + YouTube embed -->
           <li>
             <div class="content">
-              <h3>Make a hole through the cork so that the bicycle pump can easily fit into it.</h3>
-              <p>Fix the pump tube to it with plasticine or a strong seal so no air escapes.</p>
+             <h3>Step 3: Center on your breath with a guided practice.</h3>
+              <p>Close your eyes or soften your gaze. Notice your inhale and exhale
+              without trying to control them. If you’d like support, follow this short
+              guided mindfulness video to stay present during your break.</p>
 
-              <!-- Your YouTube video -->
+              <!-- YouTube video -->
               <iframe width="560" height="315" src="https://www.youtube.com/embed/-AjaZgINSMI?si=lGcOkxAeiCrbaUBm" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
 
           </li>
 
-          <!-- Step 4 + Flickr image 2 -->
+          <!-- Step 4 -->
           <li>
             <div class="content">
-              <h3>Fill the bottle about one-third full with water.</h3>
-              <p>Push the cork firmly into the opening so it seals tightly. Attach the pump to the cork, making sure it’s stable and upright before you start pumping.</p> 
+             <h3>Step 4: Expand awareness to body and sensations.</h3>
+              <p>Gently feel your energy from the top of your head down to your toes. Notice areas
+              of tension, comfort, or numbness without titling them as good or bad.
+              If your mind wanders, acknowledge it, let it be and return to your body.</p>
+
 
               <!-- Flickr image 2 -->
               <a href="https://www.flickr.com/photos/daztall/12903699615/in/photolist-2qXqqra-2otm9XW-2ouzjC4-2ouCJzE-2otN7vP-2ouFAPw-2otCvCW-kEfQkz-Ndk3zL-FLyyNu-2nMdg73-2nATjJU-Hcpek4-rq8Z5e-pSfQUi-2otsdvs-MPvWA5-cGmNch-ngL4fz-nekqex-2jWyzPy-2miiDTP-9ZuLZF-2o9qWBg-2m5Kkun-2oubVUT-e99sNg-2itdWpB-2mYCCnN-2kGduRE-2kENjWe-wFS74L-2ngReE3-2n7qZj7-U8aZTk-2ouKWJq-2orrJNu-2mqFbAD-2n5oRZT-2iWgUip-LPY2qQ-2ikw7gk-2iiyqBY-2m797R9-2nCmwrj-2n4NBsD-2otrjj4-2misoWu-2konji4-2k5L3B2" title="Mindfulness">
