Fix headings in index.html for clarity

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ Step-by-step structure containing YouTube and Flickr images
           <!-- Step 1 -->
           <li>
             <div class="content">
-              Step 1: Choose and prepare your space.</h3>
+              Choose and prepare your space.</h3>
               <p>Find a spot where you can sit with minimal interruptions. It can be by a window,
               at your desk, or outside. Turn on Do Not Disturb or silence notifications.
               Sit upright but relaxed, with your feet grounded or legs crossed.</p>
@@ -74,7 +74,7 @@ Step-by-step structure containing YouTube and Flickr images
           <!-- Step 2 -->
           <li>
             <div class="content">
-               <h3>Step 2: Set an intention for your break.</h3>
+               <h3>: Set an intention for your break.</h3>
               <p>Before you begin, decide your goal. Maybe you want to feel
               calmer, more focused, or simply present. Silently say your intention:
               “For the next five minutes, I’m giving myself permission to just be...”</p>
@@ -90,7 +90,7 @@ Step-by-step structure containing YouTube and Flickr images
           <!-- Step 3 + YouTube embed -->
           <li>
             <div class="content">
-             <h3>Step 3: Center on your breath with a guided practice.</h3>
+             <h3> Center on your breath with a guided practice.</h3>
               <p>Close your eyes or soften your gaze. Notice your inhale and exhale
               without trying to control them. If you’d like support, follow this short
               guided mindfulness video to stay present during your break.</p>
@@ -104,7 +104,7 @@ Step-by-step structure containing YouTube and Flickr images
           <!-- Step 4 -->
           <li>
             <div class="content">
-             <h3>Step 4: Expand awareness to body and sensations.</h3>
+             <h3> Expand awareness to body and sensations.</h3>
               <p>Gently feel your energy from the top of your head down to your toes. Notice areas
               of tension, comfort, or numbness without titling them as good or bad.
               If your mind wanders, acknowledge it, let it be and return to your body.</p>
