--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ Step-by-step structure containing YouTube and Flickr images
           <!-- Step 2 -->
           <li>
             <div class="content">
-               <h3>: Set an intention for your break.</h3>
+               <h3>:Set an intention for your break.</h3>
               <p>Before you begin, decide your goal. Maybe you want to feel
               calmer, more focused, or simply present. Silently say your intention:
               “For the next five minutes, I’m giving myself permission to just be...”</p>
@@ -90,7 +90,7 @@ Step-by-step structure containing YouTube and Flickr images
           <!-- Step 3 + YouTube embed -->
           <li>
             <div class="content">
-             <h3> Center on your breath with a guided practice.</h3>
+             <h3>Center on your breath with a guided practice.</h3>
               <p>Close your eyes or soften your gaze. Notice your inhale and exhale
               without trying to control them. If you’d like support, follow this short
               guided mindfulness video to stay present during your break.</p>
@@ -104,7 +104,7 @@ Step-by-step structure containing YouTube and Flickr images
           <!-- Step 4 -->
           <li>
             <div class="content">
-             <h3> Expand awareness to body and sensations.</h3>
+             <h3>Expand awareness to body and sensations.</h3>
               <p>Gently feel your energy from the top of your head down to your toes. Notice areas
               of tension, comfort, or numbness without titling them as good or bad.
               If your mind wanders, acknowledge it, let it be and return to your body.</p>
@@ -120,7 +120,7 @@ Step-by-step structure containing YouTube and Flickr images
            <!-- Step 5 -->
           <li>
             <div class="content">
-              <h3>Step 5: Bring mindfulness into your thoughts.</h3>
+              <h3>Bring mindfulness into your thoughts.</h3>
               <p>Let thoughts pass through your mind like clouds. Instead of chasing
               them, simply notice: “planning,” “worrying,” “remembering.” Naming your
               thoughts creates distance so they feel less overwhelming.</p> 
@@ -130,7 +130,7 @@ Step-by-step structure containing YouTube and Flickr images
           <!-- Step 6 + Flickr image -->
           <li>
             <div class="content">
-              <h3>Step 6: Close your practice and reflect.</h3>
+              <h3>Close your practice and reflect.</h3>
               <p>Take a final deep breath in through your nose and out through your
               mouth. Gently open your eyes and notice how you feel now versus when you
               started. Write one or two sentences about your experience to capture it.</p> 
