Add original How-To link to footer

--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@ Footer credits updated:
 
     <footer>
       <p>Mindfulness video embedded from <a href="https://www.youtube.com/watch?v=-AjaZgINSMI" title="Mindfulness YouTube video">YouTube</a>.</p>
+      <p>Original How-To <a href="https://www.wikihow.com/Be-Mindful" title="How to Be Mindful">WikiHow</a>.</p>
       <p>Images are from Flickr users:
         <a href="https://www.flickr.com/photos/83905817@N08/7676641926/" title="Mindfulness by 83905817@N08">83905817@N08</a>,
         <a href="https://www.flickr.com/photos/daztall/12903699615/" title="Mindfulness by daztall">daztall</a>, and
