Correct heading and caption text in index.html

--- a/index.html
+++ b/index.html
@@ -74,12 +74,12 @@ Step-by-step structure containing YouTube and Flickr images
           <!-- Step 2 -->
           <li>
             <div class="content">
-               <h3>:Set an intention for your break.</h3>
+               <h3>Set an intention for your break.</h3>
               <p>Before you begin, decide your goal. Maybe you want to feel
               calmer, more focused, or simply present. Silently say your intention:
               “For the next five minutes, I’m giving myself permission to just be...”</p>
 
-              <!-- Flickr image 1 -->
+              <!-- Flickr image  -->
               <a href="https://www.flickr.com/photos/83905817@N08/7676641926/in/photolist-2qXqqra-2otm9XW-2ouzjC4-Ub6TqU-2ouCJzE-2otN7vP-2ouFAPw-2otCvCW-kEfQkz-Ndk3zL-FLyyNu-2nMdg73-2nATjJU-pSfQUi-2otsdvs-MPvWA5-cGmNch-ngL4fz-nekqex-2jWyzPy-2miiDTP-9ZuLZF-2o9qWBg-2m5Kkun-bedSNg-2kENjWe-2ngReE3-2n7qZj7-U8aZTk-2ouKWJq-2orrJNu-2mqFbAD-2n5oRZT-2iWgUip-LPY2qQ-2ikw7gk-2iiyqBY-2m797R9-2nCmwrj-2n4NBsD-2otrjj4-2misoWu-2konji4-2k5L3B2-2otEZo4-2dN4guF-2qGgEW9-2mj2XEe-Wu8QDc-2otyQnt" title="Mindfulness">
                 <img src="https://live.staticflickr.com/7278/7676641926_2034eb9402_c.jpg" alt="Mindfulness">
               </a>
@@ -104,13 +104,13 @@ Step-by-step structure containing YouTube and Flickr images
           <!-- Step 4 -->
           <li>
             <div class="content">
-             <h3>Expand awareness to body and sensations.</h3>
+             <h3>Expand awareness to your body and sensations.</h3>
               <p>Gently feel your energy from the top of your head down to your toes. Notice areas
               of tension, comfort, or numbness without titling them as good or bad.
               If your mind wanders, acknowledge it, let it be and return to your body.</p>
 
 
-              <!-- Flickr image 2 -->
+              <!-- Flickr image  -->
              <a href="https://www.flickr.com/photos/daztall/12903699615/in/photolist-2qXqqra-2otm9XW-2ouzjC4-2ouCJzE-2otN7vP-2ouFAPw-2otCvCW-kEfQkz-Ndk3zL-FLyyNu-2nMdg73-2nATjJU-Hcpek4-rq8Z5e-pSfQUi-2otsdvs-MPvWA5-cGmNch-ngL4fz-nekqex-2jWyzPy-2miiDTP-9ZuLZF-2o9qWBg-2m5Kkun-2oubVUT-e99sNg-2itdWpB-2mYCCnN-2kGduRE-2kENjWe-wFS74L-2ngReE3-2n7qZj7-U8aZTk-2ouKWJq-2orrJNu-2mqFbAD-2n5oRZT-2iWgUip-LPY2qQ-2ikw7gk-2iiyqBY-2m797R9-2nCmwrj-2n4NBsD-2otrjj4-2misoWu-2konji4-2k5L3B2" title="Mindfulness">
                 <img src="https://live.staticflickr.com/7319/12903699615_fd033d2c38.jpg" alt="Mindfulness">
               </a>
@@ -122,12 +122,12 @@ Step-by-step structure containing YouTube and Flickr images
             <div class="content">
               <h3>Bring mindfulness into your thoughts.</h3>
               <p>Let thoughts pass through your mind like clouds. Instead of chasing
-              them, simply notice: “planning,” “worrying,” “remembering.” Naming your
+              them, simply notice: feelings of “rushing,” “worrying,” “remembering.” Naming your
               thoughts creates distance so they feel less overwhelming.</p> 
             </div>
           </li>
 
-          <!-- Step 6 + Flickr image -->
+          <!-- Step 6  -->
           <li>
             <div class="content">
               <h3>Close your practice and reflect.</h3>
