Fix header placement in index.html

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ Step-by-step structure containing YouTube and Flickr images
           <!-- Step 1 -->
           <li>
             <div class="content">
-              Choose and prepare your space.</h3>
+              </h3>Choose and prepare your space.</h3>
               <p>Find a spot where you can sit with minimal interruptions. It can be by a window,
               at your desk, or outside. Turn on Do Not Disturb or silence notifications.
               Sit upright but relaxed, with your feet grounded or legs crossed.</p>
